styles/info.css
h1,
h2,
h3,
h4,
header,
nav {
  font-family: geosanslight-nmsregular, geosanslight-nms, 'Open Sans', Helvetica, Verdana, Arial, sans-serif;
}
h4 {
  margin: 5px 0;
}
.info-card,
.search-area input,
body {
  font-family: 'Open Sans', Helvetica, Verdana, Arial, sans-serif;
}
body {
  margin: 0;
  overflow-x: hidden;
}
.center {
  display: block;
  margin: 0 auto;
  text-align: center;
}
header {
  background-color: #01385b;
  max-height: 70px;
  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .3);
}
header .title {
  line-height: 50px;
  font-size: 22px;
  padding: 10px;
  margin: 0 auto;
  color: #fff;
}
header .button-container {
  position: absolute;
  height: 70px;
  right: 0;
  top: 0;
  transition: right 0.3s ease-out;
}
header button {
  padding: 0;
  transition: background-color 0.2s ease-out;
  border: none;
  background-color: transparent;
  background-image: none;
  width: 70px;
  height: 70px;
  -webkit-tap-highlight-color: transparent;
  margin-left: -4px;
  cursor: pointer;
}
header button:hover {
  background-color: rgba(255, 255, 255, .2);
}
header button:focus {
  outline: 0;
}
header button img {
  width: 30px;
  height: 30px;
  margin: 20px;
}
footer {
  font-size: 0.7em;
  position: relative;
  bottom: 0;
  width: 100vw;
  text-align: center;
  padding-top: 0.25em;
  padding-bottom: 0.5em;
  background-color: #01385b;
  color: #fff;
}
footer a {
  color: #fff !important;
  text-decoration: underline;
}
footer a:hover {
  text-decoration: none;
}
nav {
  top: 70px;
  width: 100vw;
  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .3);
  text-align: center;
  background-color: #01385b;
  z-index: 1;
}
nav ul {
  max-height: 0;
  transition: max-height 0.5s;
  list-style: none;
  padding: 0;
  margin: 0;
  overflow-y: hidden;
  will-change: max-height;
}
nav.open ul {
  max-height: 100vh;
}
nav li {
  cursor: pointer;
  transition: background-color 0.2s;
}
nav li:hover {
  background-color: rgba(255, 255, 255, .2);
}
nav li span {
  display: inline-block;
  padding: 10px 7px;
  color: #fff !important;
}
main {
  position: relative;
  padding: 5px 5px 0;
}
.main {
  max-width: 53em;
  margin: 0 auto;
}
.page-container {
  display: flex;
  position: relative;
  right: 0;
  transition: transform 0.5s;
  will-change: transform;
  transform: translateZ(0);
}
.page-container > div {
  margin: 0 calc((100vw - 100%) / 4);
  /*position: absolute;*/
  min-width: 100%;
}
.page-ie {
  order: -100;
}
.page-search {
  order: -1;
}
.page-container.ie {
  /* ONLY USED FOR DEBUGGING PURPOSES */
  transform: translateX(calc(-1 * ((100vw - 100%) / 4)));
}
.page-container.search {
  transform: translateX(calc(-1 * (((100vw - 100%) / 4) + (1 * (100% + ((100vw - 100%) / 2))))));
}
.page-container {
  transform: translateX(calc(-1 * (((100vw - 100%) / 4) + (2 * (100% + ((100vw - 100%) / 2))))));
}
.page-container.cat {
  transform: translateX(calc(-1 * (((100vw - 100%) / 4) + (3 * (100% + ((100vw - 100%) / 2))))));
}
.page-container.elements {
  transform: translateX(calc(-1 * (((100vw - 100%) / 4) + (4 * (100% + ((100vw - 100%) / 2))))));
}
.page-container.links {
  transform: translateX(calc(-1 * (((100vw - 100%) / 4) + (5 * (100% + ((100vw - 100%) / 2))))));
}
.page-container.recent {
  transform: translateX(calc(-1 * (((100vw - 100%) / 4) + (6 * (100% + ((100vw - 100%) / 2))))));
}
.card-list {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: space-between;
}
.card-list .card,
.search-area {
  margin-bottom: 10px;
}
.card {
  display: inline-block;
  border-radius: 2px;
  background: #fff;
  box-sizing: border-box;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
  width: 100%;
}
.search-area {
  display: inline-block;
  position: relative;
  box-sizing: border-box;
  background: #fff;
  border-radius: 2px;
  width: 100%;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
}
.header {
  position: relative;
  border-top-left-radius: inherit;
  border-top-right-radius: inherit;
  overflow: hidden;
  cursor: pointer;
}
.header {
  background-color: #01385b;
  width: 100%;
  height: 60px;
  transition: height 0.5s, background-color 0.5s;
}
.spoiler .header {
  background-color: #e22 !important;
}
.expanded .header {
  height: 100px;
}
.card-title {
  margin: 16px;
  font-size: 24px;
  font-weight: bold;
  color: #fff;
}
.dark-text .card-title {
  color: #000;
}
.dark-text.spoiler .card-title {
  color: #fff;
}
.header .card-title {
  position: absolute;
  bottom: 0;
  transition: color 0.5s, margin 0.5s, left 0.5s;
}
.expanded .card-title {
  margin: 24px 16px;
}
.info-card .categories {
  padding: 5px 16px;
  position: absolute;
  top: -32px;
  opacity: 0;
  transition: top 0.5s, opacity 0.5s;
}
.info-card.expanded .categories {
  opacity: 1;
  top: 0;
}
.info-card .categories li {
  color: #fff;
  text-decoration: underline;
  cursor: pointer;
}
.info-card.dark-text .categories li {
  color: #000;
}
.info-card.dark-text.spoiler .categories li {
  color: #fff;
}
.info-card .categories li:hover {
  text-decoration: none;
}
.element-symbol {
  display: inline-block;
  position: absolute;
  width: 32px;
  height: 32px;
  text-align: center;
  margin: 12px;
  top: 0;
  right: 0;
  color: #fff;
  font-size: 24px;
  border: 2px solid #fff;
  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.25) 100%);
  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.25) 100%);
  background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.25) 100%);
  background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.25) 100%);
  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.25) 100%);
}
.external {
  display: inline-block;
  text-align: center;
}
.header .external {
  position: absolute;
  width: 15px;
  height: 15px;
  margin: 5px;
  top: 0;
  right: 0;
}
.card-content .external {
  height: 1.5em;
  width: 1.5em;
  cursor: pointer;
}
.external ~ span {
  position: absolute;
  cursor: pointer;
}
.card-content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.5s, padding 0.5s;
}
.expanded .card-content {
  padding-bottom: 16px;
  /* Just has to be a big value, but not too big */
  max-height: 1000px;
}
.card-content iframe {
  max-height: 300px;
  width: 100%;
  border: 0;
}
.card-content div:not(.separator) > * {
  margin-left: 0.5em;
  margin-right: 0.5em;
  padding-left: 0.5em;
  padding-right: 0.5em;
}
.card-content div:not(.separator) > p {
  margin: 0 0.5em;
  padding: 0.5em;
}
.separator {
  border-bottom: 2px solid #aaa;
}
.categories ul,
.related ul,
.sources ul {
  list-style: none;
  padding: 0;
  margin: 0;
}
.categories ul li,
.related ul li,
.sources ul li {
  display: inline-block;
  padding-right: 4px;
}
.search-area {
  padding: 16px;
  display: flex;
  background-color: #01385b;
}
.search-area input {
  margin: 5px;
  padding: 5px;
  font-size: 1.1em;
  background-color: #fff;
  color: #000;
  border: 0;
  border-radius: 2px;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
}
.search-area input[type=search] {
  flex: 1;
  box-shadow: none;
  transition: box-shadow 0.5s, opacity 0.5s;
}
.hoverable {
  position: relative;
}
.hoverable-container {
  background-color: rgba(0, 0, 0, 0.6);
  font-size: 0.75em;
  position: absolute;
  bottom: 2em;
  padding: 5px !important;
  border-radius: 2px;
  opacity: 0;
  color: #fff !important;
  visibility: hidden;
  transition: opacity 0.5s;
}
.hoverable:hover .hoverable-container {
  visibility: visible;
  opacity: 1;
}
.hoverable-container p {
  margin: 0;
}
.related li,
.sources li {
  color: #000 !important;
  text-decoration: underline;
  cursor: pointer;
}
.related li:hover,
.sources li:hover {
  text-decoration: none;
}
.added {
  background-color: #c9ffca;
  color: #1c5a0b;
}
.edited {
  background-color: #fcffc9;
  color: #90521e;
}
.removed {
  background-color: #ffcac9;
  color: #8e1310;
}
.highlighted {
  background-color: #ffff88;
}
.paint-job,
.sort-type {
  display: inline-block;
  position: relative;
  float: right;
}
.sort-type.alpha svg:not(.sort-alpha) {
  display: none;
}
.sort-type.category svg:not(.sort-category) {
  display: none;
}
.sort-type.random svg:not(.sort-random) {
  display: none;
}
.paint-job svg,
.sort-type svg {
  fill: #000;
  position: absolute;
  right: 0;
  height: 24px;
  width: 24px;
}
@media all and (min-width: 400px) {
  header .title {
    font-size: 30px;
  }
}
@media all and (min-width: 500px) {
  header .title {
    text-align: center;
  }
}
@media all and (min-width: 600px) {
  header .title {
    font-size: 40px;
  }
}
@media all and (min-width: 700px) {
  header .title {
    font-size: 50px;
  }
}
@media all and (min-width: 920px) {
  header {
    box-shadow: 0;
  }
  header .menu {
    display: none;
  }
  nav {
    position: absolute;
    left: 0;
    top: 70px;
    width: 100%;
    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, .3);
    text-align: center;
    background-color: #01385b;
    z-index: 1;
  }
  .floating ~ nav {
    position: fixed;
    top: 0;
  }
  nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
    max-height: none;
  }
  nav li {
    display: inline-block;
    /* Workaround a small inline-block bug/feature */
    margin-left: -4px;
    cursor: pointer;
    transition: background-color 0.2s;
  }
  nav li span {
    display: inline-block;
    font-size: 1em;
    padding: 19px 10px;
  }
  nav .github-link {
    position: absolute;
    top: -70px;
    right: 0;
  }
  nav .github-link span {
    width: 30px;
    height: 30px;
    margin: 20px;
    padding: 0;
  }
  nav .github {
    width: 30px;
    height: 30px;
  }
  main {
    /*.floating ~ main {*/
    top: 56px;
  }
  .card {
    max-width: calc((100% - 10px)/2);
  }
}
@media all and (min-width: 1300px) {
  .main {
    max-width: 72em;
  }
  .card {
    max-width: calc((100% - 20px)/3);
  }
}

